--- a/main.html
+++ b/main.html
@@ -36,6 +36,49 @@
 
 <script>
 //Your code goes here 
+	let selectedCube = null;
+    let offsetX = 0;
+    let offsetY = 0;
+    let container = document.querySelector(".items");
+
+    document.querySelectorAll(".item").forEach((cube) => {
+        cube.addEventListener("mousedown", (event) => {
+            selectedCube = event.target;
+            const rect = selectedCube.getBoundingClientRect();
+            offsetX = event.clientX - rect.left;
+            offsetY = event.clientY - rect.top;
+
+            selectedCube.style.position = "absolute";
+            selectedCube.style.zIndex = 1000;
+        });
+
+        document.addEventListener("mousemove", (event) => {
+            if (!selectedCube) return;
+
+            let newX = event.clientX - offsetX;
+            let newY = event.clientY - offsetY;
+
+            // Get container boundaries
+            const containerRect = container.getBoundingClientRect();
+            const cubeRect = selectedCube.getBoundingClientRect();
+
+            // Ensure cube stays inside container
+            if (newX < containerRect.left) newX = containerRect.left;
+            if (newY < containerRect.top) newY = containerRect.top;
+            if (newX + cubeRect.width > containerRect.right) newX = containerRect.right - cubeRect.width;
+            if (newY + cubeRect.height > containerRect.bottom) newY = containerRect.bottom - cubeRect.height;
+
+            selectedCube.style.left = `${newX}px`;
+            selectedCube.style.top = `${newY}px`;
+        });
+
+        document.addEventListener("mouseup", () => {
+            if (selectedCube) {
+                selectedCube.style.zIndex = 1;
+                selectedCube = null;
+            }
+        });
+    });
 </script>
 
   </body>
